# amure-do

./: .gitignore  Cargo.toml  README.md  amure-do.toml
crates/amure-db/: Cargo.toml
crates/amure-db/src/: edge.rs  graph.rs  lib.rs  node.rs  persistence.rs  search.rs  synonym.rs
crates/amure-db/tests/: rag_validation.rs  yahoo_rag.rs
engine/: lib.rs  main.rs
engine/config/: mod.rs
engine/dashboard/: graph.html  index.html
engine/knowledge/: db.rs  embedding.rs  framework.rs  mod.rs  search.rs  thesis.rs  types.rs  vector_index.rs
engine/ops/: combine.rs  crosssection.rs  features.rs  mod.rs  rolling.rs
engine/server/: activity.rs  backend.rs  llm_provider.rs  mod.rs  routes.rs
engine/server/handlers/: adaptive.rs  backend.rs  canvas.rs  chat.rs  claims.rs  dashboard.rs  evaluator.rs  external.rs  framework_api.rs  graph.rs  health.rs  judge.rs  judge_v4.rs  knowledge.rs  lab.rs  manager.rs  message_hook.rs  migration.rs  mod.rs  monitor.rs  query.rs  setup.rs  strategy.rs  thesis_api.rs
engine/strategy/: backtest.rs  mod.rs  signal_fsm.rs  trades.rs
examples/crypto-research/: README.md  amure-do.toml  amuredo.toml  scenarios.md
examples/crypto-research/backend/: requirements.txt  sample_data.py  server.py
examples/simple-research/: README.md  amuredo.toml  scenarios.md
examples/storyquant/: README.md  amure-do.toml
examples/storyquant/backend/: requirements.txt  server.py
templates/backend-julia/: README.md  server.jl
templates/backend-node/: README.md  package.json  server.js
templates/backend-python/: README.md  server.py
