[package]
name = "amure-db"
version = "0.1.0"
edition = "2021"
description = "Graph-based knowledge database with RAG search"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
